--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -33,13 +33,18 @@
 
 
 
+<p>
+I spent most of my senior year at my alma mater Hampshire College doing research on the emerging market of automotive cybersecurity. Development and deployment of connected and automated vehicles are leaping the progress of securing these vehicles by a long shot. Do you really want the automated vehicle to take the wheel without having some builtin counter-measures against potential attacks?
+My entreprneurial pursuit is focused on addressing one of the biggest concerns of highly automated vehicles - the lack of protection from attackers. You can download two of my thesis down below.
+</p>
 
-<p> click here to download <a href = "">Autonomous Truck and Its Implication on the Trucking Industry</a>
+
+<p> click here to download <a href = "pdf/Autonomous Truck and Its Implication on the Trucking Industry.pdf">Autonomous Truck and Its Implication on the Trucking Industry</a>
 </p>
 
 <p></p>
 
-<p> click here to download <a href = "">Securing the Future of Connected Vehicles: 
+<p> click here to download <a href = "pdf/Securing the Future of Connected Vehicles.pdf">Securing the Future of Connected Vehicles: 
 An Analysis on Challenges and Market Opportunities
 </a>
 </p>
