--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p>
 I was born in China and moved to the US when I was 16 years old and attended a prestigious private boarding school in New England.
 My entreprneurial pursuit is focused on addressing one of the biggest concerns of highly automated vehicles - the lack of protection from malicious hackers. I recently graduated from Hampshire College after spending a whole year researching on this very issue.
-I travel frequently between Raleigh-Durham area and Sillicon Valley. Hello Puppy!</p>
+I travel frequently between Raleigh-Durham area and Sillicon Valley.</p>
 <img src="img/profile.jpg" width="400" height="400"></img>
 
 </body>
