--- a/racing.html
+++ b/racing.html
@@ -37,6 +37,11 @@
 I race with Sports Car Club of America in their highly competitive Spec Miata class. I started my racing career in 2014 and have done fairly well in two seasons.
 </p>
 
+<img src="img/racing sm.jpg" width="400" height="400"></img>
+<img src="img/racing evo.jpg" width="400" height="400"></img>
+<img src="img/racing e36.jpg" width="400" height="400"></img>
+<img src="img/racing brz.jpg" width="400" height="400"></img>
+
 
 
 
