--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -2,31 +2,24 @@
 <html>
 
 <head>
-<title> Xiang Li's Webpage </title>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
+<title>Xiang Li's Webpage </title>
 </head>
 
 
-
 <body>
-<h1>Xiang Li's Personal Website</h1>
-
-<hr>
-
-<style type="text/css">
-	h3{display: inline}
-</style>
+<h1> Xiang Li's Personal Website</h1>
 
 
-<h3 style="text-align:left"><a href = "index.html">Home</a></h3>
+<h3><a href = "index.html">Home</a></h3>
 
 <h3>||</h3>
 
-
-<h3 style="text-align:left"><a href = "cybersecurity.html">Automotive Cybersecurity Research</a></h3>
+<h3><a href = "cybersecurity.html">Automotive Cybersecurity Research</a></h3>
 
 <h3>||</h3>
 
-<h3 style="text-align:center"><a href="racing.html">Racing Career</a></h3>
+<h3><a href="racing.html">Racing Career</a></h3>
 
 <h3>||</h3>
 
