--- a/racing.html
+++ b/racing.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <title> Xiang Li's Webpage </title>
 </head>
 
@@ -12,9 +13,6 @@
 
 <hr>
 
-<style type="text/css">
-	h3{display: inline}
-</style>
 
 
 <h3 style="text-align:left"><a href = "index.html">Home</a></h3>
@@ -37,10 +35,11 @@
 I race with Sports Car Club of America in their highly competitive Spec Miata class. I started my racing career in 2014 and have done fairly well in two seasons.
 </p>
 
-<img src="img/racing sm.jpg" width="400" height="400"></img>
-<img src="img/racing evo.jpg" width="400" height="400"></img>
-<img src="img/racing e36.jpg" width="400" height="400"></img>
-<img src="img/racing brz.jpg" width="400" height="400"></img>
+<img src="img/racing sm.jpg" width="2136" height="600"></img>
+<img src="img/racing evo.jpg" width="1000" height="667"></img>
+<img src="img/racing e36.jpg" width="1280" height="853"></img>
+<img src="img/racing brz.jpg" width="1024" height="683"></img>
+
 
 
 
