--- a/racing.html
+++ b/racing.html
@@ -3,28 +3,23 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
-<title> Xiang Li's Webpage </title>
+<title>Xiang Li's Webpage </title>
 </head>
 
 
-
 <body>
-<h1>Xiang Li's Personal Website</h1>
-
-<hr>
+<h1> Xiang Li's Personal Website</h1>
 
 
-
-<h3 style="text-align:left"><a href = "index.html">Home</a></h3>
+<h3><a href = "index.html">Home</a></h3>
 
 <h3>||</h3>
 
-
-<h3 style="text-align:left"><a href = "cybersecurity.html">Automotive Cybersecurity Research</a></h3>
+<h3><a href = "cybersecurity.html">Automotive Cybersecurity Research</a></h3>
 
 <h3>||</h3>
 
-<h3 style="text-align:center"><a href="racing.html">Racing Career</a></h3>
+<h3><a href="racing.html">Racing Career</a></h3>
 
 <h3>||</h3>
 
@@ -35,10 +30,10 @@
 I race with Sports Car Club of America in their highly competitive Spec Miata class. I started my racing career in 2014 and have done fairly well in two seasons.
 </p>
 
-<img src="img/racing sm.jpg" width="2136" height="600"></img>
-<img src="img/racing evo.jpg" width="1000" height="667"></img>
-<img src="img/racing e36.jpg" width="1280" height="853"></img>
-<img src="img/racing brz.jpg" width="1024" height="683"></img>
+<img src="img/racing sm.jpg"></img>
+<img src="img/racing evo.jpg"></img>
+<img src="img/racing e36.jpg"></img>
+<img src="img/racing brz.jpg"></img>
 
 
 
