--- a/contact.html
+++ b/contact.html
@@ -30,19 +30,8 @@
 
 
 <p>
-I partcipate in many different disciplines of racing, including endurance racing, sprint racing, sim racing, karting, rallycrossing, and drifting. I have many achievements in these categories. 
+My email address is lx93@me.com
 </p>
-
-<img src="img/racing sm.jpg"></img>
-<img src="img/racing evo.jpg"></img>
-<img src="img/racing e36.jpg"></img>
-<img src="img/racing brz.jpg"></img>
-
-
-
-
-
 
 </body>
 </html>
-
