--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -23,14 +23,15 @@
 
 <h3>||</h3>
 
+
+<h3><a href="contact.html">Contact</a></h3>
+
+<h3>||</h3>
+
+
+
 <p>
-
-</p>
-
-
-<p>
-I spent most of my senior year at my alma mater Hampshire College doing research on the emerging market of automotive cybersecurity. Development and deployment of connected and automated vehicles are leaping the progress of securing these vehicles by a long shot. Do you really want the automated vehicle to take the wheel without having some builtin counter-measures against potential attacks?
-My entreprneurial pursuit is focused on addressing one of the biggest concerns of highly automated vehicles - the lack of protection from attackers. You can download two of my thesis down below.
+I spent my senior year at my alma mater, Hampshire College, doing research on the emerging market of automotive cybersecurity. The development and deployment of connected and automated vehicles create a need for this kind of technology. Would one really want an automated vehicle to take the wheel without having any protection against potential cyber-attacks? I am focused on addressing one of the biggest concerns of the automated vehicle market - the lack of protection from hackers. Links to download my thesis are found below.
 </p>
 
 
@@ -43,6 +44,10 @@ My entreprneurial pursuit is focused on addressing one of the biggest concerns o
 An Analysis on Challenges and Market Opportunities
 </a>
 </p>
+
+
+
+<embed src="pdf/Securing the Future of Connected Vehicles.pdf" width="800px" height="2100px" />
 
 
 </body>
