--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
 <h3>||</h3>
 
 
+<h3><a href="contact.html">Contact</a></h3>
+
+<h3>||</h3>
+
+
 
 
 <p>
-I was born in China and moved to the US when I was 16 years old and attended a prestigious private boarding school in New England.
-My entreprneurial pursuit is focused on addressing one of the biggest concerns of highly automated vehicles - the lack of protection from malicious hackers. I recently graduated from Hampshire College after spending a whole year researching on this very issue.
-I travel frequently between Raleigh-Durham area and Sillicon Valley.</p>
+I was born in China and moved to the US when I was 16 years old to attend a prestigious private boarding school in New England.
+I graduated from Hampshire College in the spring of 2017 with a major in Entrepreneurship and Technology. I spent a year researching autonomous vehice cyber-security, concluding in a thesis paper and symposium presentation.
+I travel frequently between North Carolina's Research Triangle area and Silicon Valley.</p>
 <img src="img/profile.jpg" width="400" height="400"></img>
 
 </body>
