--- a/racing.html
+++ b/racing.html
@@ -33,6 +33,8 @@
 I partcipate in many different disciplines of racing, including endurance racing, sprint racing, sim racing, karting, rallycrossing, and drifting. I have many achievements in these categories. 
 </p>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fh18TjO2CFs" frameborder="0" allowfullscreen></iframe>
+
 <img src="img/racing sm.jpg"></img>
 <img src="img/racing evo.jpg"></img>
 <img src="img/racing e36.jpg"></img>
