--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -30,6 +30,11 @@
 
 
 
+<a href="https://www.linkedin.com/in/xiang-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
+<a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
+
+
+
 <p>
 I spent my senior year at my alma mater, Hampshire College, doing research on the emerging market of automotive cybersecurity. The development and deployment of connected and automated vehicles create a need for this kind of technology. Would one really want an automated vehicle to take the wheel without having any protection against potential cyber-attacks? I am focused on addressing one of the biggest concerns of the automated vehicle market - the lack of protection from hackers. Links to download my thesis are found below.
 </p>
