--- a/racing.html
+++ b/racing.html
@@ -28,6 +28,9 @@
 <h3>||</h3>
 
 
+<a href="https://www.linkedin.com/in/xiang-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
+<a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
+
 
 <p>
 I partcipate in many different disciplines of racing, including endurance racing, sprint racing, sim racing, karting, rallycrossing, and drifting. I have many achievements in these categories. 
