--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <h3>||</h3>
 
 
+<a href="https://www.linkedin.com/in/xiang-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
+<a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
 
 
 <p>
