--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -28,6 +28,12 @@
 
 <h3>||</h3>
 
+<h3><a href="resume.html">Resume</a></h3>
+
+<h3>||</h3>
+
+
+
 
 
 <a href="https://www.linkedin.com/in/xiang-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
