--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 
 <h3>||</h3>
 
+<h3><a href="resume.html">Resume</a></h3>
+
+<h3>||</h3>
+
+
 
 <a href="https://www.linkedin.com/in/xiang-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
 <a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
@@ -35,8 +40,11 @@
 
 <p>
 I was born in China and moved to the US when I was 16 years old to attend a prestigious private boarding school in New England.
-I graduated from Hampshire College in the spring of 2017 with a major in Entrepreneurship and Technology. I spent a year researching autonomous vehice cyber-security, concluding in a thesis paper and symposium presentation.
-I travel frequently between North Carolina's Research Triangle area and Silicon Valley.</p>
+I graduated from Hampshire College in the spring of 2017 with a study focus in Entrepreneurship and Computer Science. I spent a year researching autonomous vehice cybersecurity, concluding in a thesis paper and symposium presentation. I travel frequently between North Carolina's Research Triangle Area and the Bay Area.
+</p>
+
+<p>Talk to me if you are interested in these: Bitcoin, Connected/Automated Vehicles, Real Estate, Programming and Racing.</p>
+
 <img src="img/profile.jpg" width="400" height="400"></img>
 
 </body>
