--- a/resume.html
+++ b/resume.html
@@ -37,11 +37,20 @@
 <a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
 
 
-<h1>email: <a href="mailto:lx93@me.com">lx93@me.com</a></h1>
-<h1>cell: 617-763-5369</h1>
+<p>
+
+Work Experience
+
+Education
+Hampshire College, Amherst MA, Bachelor of Arts, Business/ Entrepreneurship and Computer Science, May 2017
+
+Leadership Experience
+Teaching Assistant, Hampshire College; Amherst, MA Spring 2017
 
 
 
+
+</p>
 
 </body>
 </html>
