--- a/resume.html
+++ b/resume.html
@@ -37,20 +37,8 @@
 <a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
 
 
-<p>
+<embed src="pdf/resume.pdf" width="800px" height="2100px" />
 
-Work Experience
-
-Education
-Hampshire College, Amherst MA, Bachelor of Arts, Business/ Entrepreneurship and Computer Science, May 2017
-
-Leadership Experience
-Teaching Assistant, Hampshire College; Amherst, MA Spring 2017
-
-
-
-
-</p>
 
 </body>
 </html>
