--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -10,7 +10,7 @@
 <body>
 <h1> Xiang Li's Personal Website</h1>
 
-
+acks, such as ransomacks, such as ransomware attempts. Our connected technologies aim to allow OEMs and fleet managers to establish a strong security foundation in their vehicles from the stware attempts. Our connected technologies aim to allow OEMs and fleet managers to establish a strong security foundation in their vehicles from the st
 <h3><a href = "index.html">Home</a></h3>
 
 <h3>||</h3>
