added crypto page

--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -10,10 +10,14 @@
 <body>
 <h1> Xiang Li's Personal Website</h1>
 
-acks, such as ransomacks, such as ransomware attempts. Our connected technologies aim to allow OEMs and fleet managers to establish a strong security foundation in their vehicles from the stware attempts. Our connected technologies aim to allow OEMs and fleet managers to establish a strong security foundation in their vehicles from the st
 <h3><a href = "index.html">Home</a></h3>
 
 <h3>||</h3>
+
+<h3><a href="crypto.html">Blockchain and Ctyptocurrency</a></h3>
+
+<h3>||</h3>
+
 
 <h3><a href = "cybersecurity.html">Automotive Cybersecurity Research</a></h3>
 
@@ -36,7 +40,8 @@ acks, such as ransomacks, such as ransomware attempts. Our connected technologie
 
 
 
-<a href="https://www.linkedin.com/in/xiang-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
+
+<a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
 <a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
 
 
