--- a/crypto.html
+++ b/crypto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 <title>Xiang Li's Webpage </title>
@@ -39,16 +40,18 @@
 
 
 
-
 <a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
 <a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
 
 
-<h1>email: <a href="mailto:lx93@me.com">lx93@me.com</a></h1>
-<h1>cell: 617-763-5369</h1>
+<p>
+Currently I am working on a startup idea aiming to make a consumer facing crypto mining product. We are going thru Launch Chapel Hill's Cohort 9 accelerator program from January 2018 to June 2018.
+</p>
 
-
+<p>You can find out more by <a href = "http://isaiahminer.com">clicking here</a>.</p>
 
 
 </body>
+
+
 </html>
