--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
 <h3>||</h3>
 
+<h3><a href="crypto.html">Blockchain and Ctyptocurrency</a></h3>
+
+<h3>||</h3>
+
+
 <h3><a href = "cybersecurity.html">Automotive Cybersecurity Research</a></h3>
 
 <h3>||</h3>
@@ -35,7 +40,7 @@
 
 
 
-<a href="https://www.linkedin.com/in/xiang-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
+<a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
 <a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
 
 
