--- a/racing.html
+++ b/racing.html
@@ -15,6 +15,11 @@
 
 <h3>||</h3>
 
+<h3><a href="crypto.html">Blockchain and Ctyptocurrency</a></h3>
+
+<h3>||</h3>
+
+
 <h3><a href = "cybersecurity.html">Automotive Cybersecurity Research</a></h3>
 
 <h3>||</h3>
@@ -22,6 +27,7 @@
 <h3><a href="racing.html">Racing Career</a></h3>
 
 <h3>||</h3>
+
 
 <h3><a href="contact.html">Contact</a></h3>
 
@@ -32,7 +38,9 @@
 <h3>||</h3>
 
 
-<a href="https://www.linkedin.com/in/xiang-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
+
+
+<a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><img src="img/linkedin.png" style="width:28px;height:28px;"></img></a>
 <a href="https://github.com/lx93"><img src="img/github.svg" style="width:28px;height:28px;"></img></a>
 
 
