--- a/home4.html
+++ b/home4.html
@@ -33,7 +33,7 @@
 		<div class="loader"></div>
 	</div>
 	
-	<div class="home-three-style">
+	<div class="home-four-style">
 		<!-- Header section start -->
 		<header class="header-section">
 			<div class="container-fluid">
@@ -52,11 +52,12 @@
 			</div>
 		</header>
 		<!-- Header section end -->
-		
+
 		<div class="container-fluid p-0">
 			<div class="row m-0">
 				<div class="col-xl-5 col-lg-5 p-0">
 					<div class="main-left-area h-100">
+						<!-- hero section -->
 						<section class="intro-section">
 							<figure class="hero-image">
 								<img src="img/hero-3.jpg" alt="">
@@ -76,7 +77,7 @@
 								</ul>
 							</div>
 						</section>
-
+						<!-- extra section -->
 						<section class="extra-section spad">
 							<div class="section-title">
 								<h2>Extra Skills</h2>
@@ -86,7 +87,7 @@
 									<div class="fact-box trans">
 										<div class="fact-content">
 											<div class="circle-progress">
-												<div id="progress1" class="prog-circle"></div>
+												<div id="progress3" class="prog-circle"></div>
 												<div class="progress-info">
 													<h2>75%</h2>
 												</div>
@@ -102,7 +103,7 @@
 									<div class="fact-box trans">
 										<div class="fact-content">
 											<div class="circle-progress">
-												<div id="progress2" class="prog-circle"></div>
+												<div id="progress4" class="prog-circle"></div>
 												<div class="progress-info">
 													<h2>83%</h2>
 												</div>
@@ -134,6 +135,7 @@
 								</div>
 							</div>
 						</section>
+						<!-- language skill section -->
 						<section class="language-section spad">
 							<div class="section-title">
 								<h2>Languages</h2>
@@ -153,7 +155,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="col-xl-6 col-lg-7">
 					<div class="main-right-area">
 						<!-- Resume section start -->
@@ -199,6 +200,7 @@
 							</ul>
 						</section>
 						<!-- Resume section end -->
+
 						
 						<!-- Review section start -->
 						<section class="review-section spad">
@@ -231,6 +233,7 @@
 							<div class="section-title">
 								<h2>Skills</h2>
 							</div>
+							<!-- progress bars -->
 							<div class="skills">
 								<div class="single-progress-item">
 									<div class="progress-bar-style" data-progress="99"></div>
@@ -249,6 +252,7 @@
 									<p>HTML</p>
 								</div>
 							</div>
+							<!-- icon boxes -->
 							<div class="icon-box-area spad">
 								<div class="icon-box">
 									<i class="flaticon-032-cooking"></i>
@@ -278,7 +282,6 @@
 			</div>
 		</div>
 	</div>
-
 	<!-- Footer section start -->
 	<footer class="footer-section">
 		<div class="container text-center">
