--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Civic - CV Resume</title>
+	<title>Xiang(Bill) Li's personal website</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Civic - CV Resume">
 	<meta name="keywords" content="resume, civic, onepage, creative, html">
@@ -14,8 +14,8 @@
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/flaticon.css"/>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous"/>
 	<link rel="stylesheet" href="css/owl.carousel.css"/>
 	<link rel="stylesheet" href="css/magnific-popup.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
@@ -35,12 +35,12 @@
 	
 	<div class="home-three-style">
 		<!-- Header section start -->
-		<header class="header-section">
+<!-- 		<header class="header-section">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4">
 						<div class="site-logo">
-							<h2><a href="#">Civic</a></h2>
+							<h2><a href="#">Xiang(Bill) Li</a></h2>
 							<p>Enhance your online presence</p>
 						</div>
 					</div>
@@ -50,7 +50,7 @@
 					</div>
 				</div>
 			</div>
-		</header>
+		</header> -->
 		<!-- Header section end -->
 		
 		<div class="container-fluid p-0">
@@ -59,25 +59,25 @@
 					<div class="main-left-area h-100">
 						<section class="intro-section">
 							<figure class="hero-image">
-								<img src="img/hero-3.jpg" alt="">
+								<img src="img/profile.jpg" alt="">
 							</figure>
 							<div class="hero-text">
-								<h2>Maria<br>Williams</h2>
-								<p>I’m a digital designer in love with photography, painting and discovering new worlds and cultures.</p>
+								<h2>Xiang(Bill)<br>Li</h2>
+								<p>Just another clueless entrepreneur.</p>
 							</div>
-							<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consectetur eget felis et volutpat. Integer id nulla at diam eleifend fringilla. Donec eu ornare libero. Fusce pulvinar magna id pharetra laoreet. Donec convallis cursus libero. Nam semper risus sit amet rhoncus maximus. Integer eros ante, convallis sit amet vulputate nec, molestie vitae nisi. Phasellus convallis augue vel rhoncus congue. Morbi interdum molestie orci sed ullamcorper. Vivamus aliquet eros ut leo luctus, a venenatis metus faucibus. Maecenas ipsum nisi, iaculis in orci vel, molestie gravida erat. </p>
+							<p class="mb-5">Certified classic car collector (CCCC)<br>Good Li-bertarian<br>Computer nerd, all things tech<br>Musician at heart, althought crticially out of practice</p>
 							<div class="hero-info pt-5">
 								<h2>General Info</h2>
 								<ul>
-									<li><span>Date of Birth</span>Aug 25, 1988</li>
-									<li><span>Address</span>Rosia Road 55, Gibraltar, UK</li>
-									<li><span>E-mail</span>mariawilliams@company.com</li>
-									<li><span>Phone </span>+43 5266 22 345</li>
+									<li><span>Date of Birth</span>Sep 9, 1993</li>
+									<li><span>Location</span>Chapel Hill, NC</li>
+									<li><span>E-mail</span>lx93@me.com</li>
+									<li><span>Phone </span>+1 617-763-5369</li>
 								</ul>
 							</div>
 						</section>
 
-						<section class="extra-section spad">
+<!-- 						<section class="extra-section spad">
 							<div class="section-title">
 								<h2>Extra Skills</h2>
 							</div>
@@ -133,23 +133,21 @@
 									</div>
 								</div>
 							</div>
-						</section>
+						</section> -->
 						<section class="language-section spad">
 							<div class="section-title">
 								<h2>Languages</h2>
 							</div>
 							<ul class="language-progress">
 								<li>English <div class="lan-prog" data-lanprogesss="5"></div></li>
-								<li>Spanish <div class="lan-prog" data-lanprogesss="4"></div></li>
-								<li>Chinesse <div class="lan-prog" data-lanprogesss="3"></div></li>
+								<li>Chinesse <div class="lan-prog" data-lanprogesss="5"></div></li>
 							</ul>
+							<h4><br>I am also fluent in bullshiting!</h4>
 						</section>
 						<div class="social-links">
-							<a href=""><i class="fa fa-pinterest"></i></a>
-							<a href=""><i class="fa fa-linkedin"></i></a>
-							<a href=""><i class="fa fa-instagram"></i></a>
-							<a href=""><i class="fa fa-facebook"></i></a>
-							<a href=""><i class="fa fa-twitter"></i></a>
+							<a href=""><i class="fab fa-linkedin"></i></a>
+							<a href=""><i class="fab fa-facebook"></i></a>
+							<a href=""><i class="fab fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
@@ -163,45 +161,45 @@
 							</div>
 							<ul class="resume-list">
 								<li>
-									<h2>2016-Present</h2>
-									<h3>Web Design Company</h3>
-									<h4>Web Designer</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
+									<h2>2018-Present</h2>
+									<h3>Point Payment Technologies</h3>
+									<h4>Founder and Chief Embarrassment Office</h4>
+									<p>I was participating in a blockchain hackathon trying to come up with a use-case for blockchain technology. Right around the same time, I noticed a lot of small local businesses are still issuing handwritte paper gift certificate. That made me think there is an opportunity in blockchain-ify gift card and loyalty/rewards program. I ditched building the platform on blockchain after a short while for it was still too new of a technology with a lot of issues still needs to be addressed before large scale adoption. I founded Point Payment Technologies, a company that I hope can resolve the pain of inefficient gift card program found at thousands of local businesses.</p>
 								</li>
-								<li>
+<!-- 								<li>
 									<h2>2014-2016</h2>
 									<h3>Web Design Company</h3>
 									<h4>Web Designer</h4>
 									<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
-								</li>
+								</li> -->
 							</ul>
 						</section>
 						<!-- Resume section end -->
 
 						<!-- Resume section start -->
-						<section class="resume-section">
+						<section class="resume-section spad pt-0">
 							<div class="section-title">
 								<h2>Education</h2>
 							</div>
 							<ul class="resume-list">
 								<li>
-									<h2>2008</h2>
-									<h3>Ui/Ux Diploma</h3>
-									<h4>Design College California</h4>
-									<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
+									<h2>2013-2017</h2>
+									<h3>Liberal Arts Degree</h3>
+									<h4>Hampshire College</h4>
+									<p>I had a lot of fun partying and hanging out with my buddies, but how much did I learn? Was it worth the $60,000 a year? In the hindsight I wish I dropped out of college instead of wasting four years of my life. I learned a lot more than I have in college since I graduated.</p>
 								</li>
 								<li>
-									<h2>2006</h2>
-									<h3>Web design Diploma</h3>
-									<h4>Design College California</h4>
-									<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
+									<h2>2011-2013</h2>
+									<h3>High School Diploma</h3>
+									<h4>Portsmouth Abbey School</h4>
+									<p>My poor parent paid to send me to an expensive boarding school where I did very little studying and caused a whole lot of troubles. I did graduate, just barely in the end so I think I did alright?</p>
 								</li>
 							</ul>
 						</section>
 						<!-- Resume section end -->
 						
 						<!-- Review section start -->
-						<section class="review-section spad">
+<!-- 						<section class="review-section spad">
 							<div class="section-title">
 								<h2>References</h2>
 							</div>
@@ -225,7 +223,7 @@
 									<h4>Manager, Company</h4>
 								</div>
 							</div>
-						</section>
+						</section> -->
 						<!-- skill section start -->
 						<div class="skill-section">
 							<div class="section-title">
@@ -233,42 +231,54 @@
 							</div>
 							<div class="skills">
 								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="99"></div>
-									<p>Design</p>
+									<div class="progress-bar-style" data-progress="59"></div>
+									<p>JavaScript</p>
 								</div>
 								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="75"></div>
-									<p>Illsutrator</p>
+									<div class="progress-bar-style" data-progress="42"></div>
+									<p>Java</p>
 								</div>
 								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="87"></div>
-									<p>Photoshop</p>
+									<div class="progress-bar-style" data-progress="47"></div>
+									<p>Python</p>
 								</div>
 								<div class="single-progress-item">
-									<div class="progress-bar-style" data-progress="60"></div>
-									<p>HTML</p>
+									<div class="progress-bar-style" data-progress=31></div>
+									<p>MongoDB</p>
+								</div>
+								<div class="single-progress-item">
+									<div class="progress-bar-style" data-progress="53"></div>
+									<p>Node.JS</p>
+								</div>
+								<div class="single-progress-item">
+									<div class="progress-bar-style" data-progress="31"></div>
+									<p>DevOps</p>
 								</div>
 							</div>
 							<div class="icon-box-area spad">
 								<div class="icon-box">
-									<i class="flaticon-032-cooking"></i>
-									<p>Cooking</p>
+									<i class="fas fa-flag-checkered"></i>
+									<p>Racing</p>
 								</div>
 								<div class="icon-box">
-									<i class="flaticon-015-photo-camera"></i>
-									<p>Photography</p>
+									<i class="fas fa-code"></i>
+									<p>Programming</p>
 								</div>
 								<div class="icon-box">
-									<i class="flaticon-013-chess-1"></i>
-									<p>Playing Chess</p>
+									<i class="fab fa-bitcoin"></i>
+									<p>Bitcoin</p>
+								</div>
+<!-- 								<div class="icon-box">
+									<i class="fas fa-bicycle"></i>
+									<p>Mountain biking</p>
 								</div>
 								<div class="icon-box">
-									<i class="flaticon-001-yoga"></i>
-									<p>Yoga</p>
+									<i class="fas fa-gamepad"></i>
+									<p>Fortnite</p>
 								</div>
 								<div class="icon-box">
-									<i class="flaticon-035-tent"></i>
-									<p>Camping in nature</p>
+									<i class="fas fa-gamepad"></i>
+									<p>Fortnite</p> -->
 								</div>
 							</div>
 						</div>
