--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 			<div class="row m-0">
 				<div class="col-xl-5 col-lg-5 p-0">
 					<div class="main-left-area h-100">
-						<section class="intro-section">
+						<img src="img/pusheen.png" alt="" width="50%">
+						<h5><br>^^^My spiritual animal^^^</h5>
+						<section class="intro-section">				
 							<figure class="hero-image">
 								<img src="img/profile.jpg" alt="">
 							</figure>
