updated to reflect latest changes

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
 								<li>English <div class="lan-prog" data-lanprogesss="5"></div></li>
 								<li>Chinesse <div class="lan-prog" data-lanprogesss="5"></div></li>
 							</ul>
-							<h4><br>I am also fluent in bullshiting!</h4>
+							<h4><br>I am also fluent in s**t talking on Twitter!</h4>
 						</section>
 						<div class="social-links">
-							<a href=""><i class="fab fa-linkedin"></i></a>
-							<a href=""><i class="fab fa-facebook"></i></a>
-							<a href=""><i class="fab fa-twitter"></i></a>
+							<a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><i class="fab fa-linkedin"></i></a>
+							<a href="https://www.facebook.com/Xiang.Li93"><i class="fab fa-facebook"></i></a>
+							<a href="https://twitter.com/lx93bill"><i class="fab fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
@@ -165,8 +165,13 @@
 								<li>
 									<h2>2018-Present</h2>
 									<h3>Point Payment Technologies</h3>
-									<h4>Founder and Chief Embarrassment Office</h4>
-									<p>I was participating in a blockchain hackathon trying to come up with a use-case for blockchain technology. Right around the same time, I noticed a lot of small local businesses are still issuing handwritte paper gift certificate. That made me think there is an opportunity in blockchain-ify gift card and loyalty/rewards program. I ditched building the platform on blockchain after a short while for it was still too new of a technology with a lot of issues still needs to be addressed before large scale adoption. I founded Point Payment Technologies, a company that I hope can resolve the pain of inefficient gift card program found at thousands of local businesses.</p>
+									<h4>Founder</h4>
+									<p>Point Payment Technologies was created to provide small businesses with mobile app based prepaid debit payment solution. The company went thru the Launch Chapel Hill accelerator incubator in spring of 2018. </p>
+
+									<ul> * Market research: identified customer pain points thru extensivemarket research and interviews, calculate TAM size and projected financials.</ul>
+									<ul> * Business development: preparing and refining pitch deck, meeting with potential customers, and presenting to investors.</ul>
+									<ul> * BUIDL: taught myself React from scratch, and thru a two months long code sprint delivered and published two apps to Google Play Store, along with shipping a working backend using and deployed on AWS/Heroku.</ul>
+
 								</li>
 <!-- 								<li>
 									<h2>2014-2016</h2>
@@ -186,15 +191,20 @@
 							<ul class="resume-list">
 								<li>
 									<h2>2013-2017</h2>
-									<h3>Liberal Arts Degree</h3>
+									<h3>Bachelor of Arts</h3>
 									<h4>Hampshire College</h4>
-									<p>I had a lot of fun partying and hanging out with my buddies, but how much did I learn? Was it worth the $60,000 a year? In the hindsight I wish I dropped out of college instead of wasting four years of my life. I learned a lot more than I have in college since I graduated.</p>
+									<p>Students at Hampshire College design their own curriculums and study concentration. I had my curriculum setup similar to a MBA program along ith a few classes in Computer Science nd Industrial Design.</p>
+
+									<p><br>Senior thesis: </p>
+									<a href="pdf/Autonomous Truck and Its Implication on the Trucking Industry.pdf">Autonomous Truck and Its Implication on the Trucking Industry</a>
+									<a href="pdf/Securing the Future of Connected Vehicles.pdf">Securing the Future of Connected Vehicles - An Analysis on Challenges and Market Opportunities</a>
+
 								</li>
 								<li>
 									<h2>2011-2013</h2>
 									<h3>High School Diploma</h3>
 									<h4>Portsmouth Abbey School</h4>
-									<p>My poor parent paid to send me to an expensive boarding school where I did very little studying and caused a whole lot of troubles. I did graduate, just barely in the end so I think I did alright?</p>
+									<p>Nothing going on here. Just a boring little Catholic High School in the tiny state of Rhode Island.</p>
 								</li>
 							</ul>
 						</section>
@@ -295,7 +305,7 @@
 	<footer class="footer-section">
 		<div class="container text-center">
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
 		</div>
