updated to reflect latest changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Xiang(Bill) Li's personal website</title>
+	<title>Bill(Xiang) Li's personal website</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Civic - CV Resume">
 	<meta name="keywords" content="resume, civic, onepage, creative, html">
@@ -35,22 +35,17 @@
 	
 	<div class="home-three-style">
 		<!-- Header section start -->
-<!-- 		<header class="header-section">
+		<header class="header-section">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4">
-						<div class="site-logo">
-							<h2><a href="#">Xiang(Bill) Li</a></h2>
-							<p>Enhance your online presence</p>
-						</div>
 					</div>
 					<div class="col-md-8 text-md-right header-buttons">
-						<a href="#" class="site-btn">Download CV</a>
-						<a href="#" class="site-btn">Discover me</a>
+						<a href="./pdf/Bill Li resume.pdf" class="site-btn">Resume</a>
 					</div>
 				</div>
 			</div>
-		</header> -->
+		</header>
 		<!-- Header section end -->
 		
 		<div class="container-fluid p-0">
@@ -64,17 +59,18 @@
 								<img src="img/profile.jpg" alt="">
 							</figure>
 							<div class="hero-text">
-								<h2>Xiang(Bill)<br>Li</h2>
-								<p>Just another clueless entrepreneur.</p>
+								<h2>Bill(Xiang)<br>Li</h2>
+								<p>CS student with a twist</p>
 							</div>
-							<p class="mb-5">Certified classic car collector (CCCC)<br>Good Li-bertarian<br>Computer nerd, all things tech<br>Musician at heart, althought crticially out of practice</p>
+							<p class="mb-5">🏎️I do A LOT of racing at circuits all over🏎️<br>📈I think A LOT about macroeconomics📈<br>🎸I play A LOT of musical instruments🎸</p>
 							<div class="hero-info pt-5">
-								<h2>General Info</h2>
+								<h2>Important Facts</h2>
 								<ul>
-									<li><span>Date of Birth</span>Sep 9, 1993</li>
-									<li><span>Location</span>Chapel Hill, NC</li>
-									<li><span>E-mail</span>lx93@me.com</li>
-									<li><span>Phone </span>+1 617-763-5369</li>
+									<li><span>Favorite Car</span>Caterham Super 7</li>
+									<li><span>Favorite Band</span>Cake🎂</li>
+									<li><span>Favorite Food</span>Pizza🍕</li>
+									<li><span>Favorite Editor</span>Vim✌️</li>
+									<li><span>Indentation</span>TABS📑</li>									
 								</ul>
 							</div>
 						</section>
@@ -142,14 +138,12 @@
 							</div>
 							<ul class="language-progress">
 								<li>English <div class="lan-prog" data-lanprogesss="5"></div></li>
-								<li>Chinesse <div class="lan-prog" data-lanprogesss="5"></div></li>
+								<li>Chinese <div class="lan-prog" data-lanprogesss="5"></div></li>
 							</ul>
-							<h4><br>I am also fluent in s**t talking on Twitter!</h4>
 						</section>
 						<div class="social-links">
 							<a href="https://www.linkedin.com/in/xiang-bill-li-6a197188/"><i class="fab fa-linkedin"></i></a>
-							<a href="https://www.facebook.com/Xiang.Li93"><i class="fab fa-facebook"></i></a>
-							<a href="https://twitter.com/lx93bill"><i class="fab fa-twitter"></i></a>
+							<a href="https://github.com/lx93"><i class="fab fa-github"></i></a>
 						</div>
 					</div>
 				</div>
@@ -159,18 +153,18 @@
 						<!-- Resume section start -->
 						<section class="resume-section spad pt-0">
 							<div class="section-title">
-								<h2>Work Experience</h2>
+								<h2>Experience & Projects</h2>
 							</div>
 							<ul class="resume-list">
 								<li>
-									<h2>2018-Present</h2>
+									<h2>2017-2018</h2>
 									<h3>Point Payment Technologies</h3>
 									<h4>Founder</h4>
-									<p>Point Payment Technologies was created to provide small businesses with mobile app based prepaid debit payment solution. The company went thru the Launch Chapel Hill accelerator incubator in spring of 2018. </p>
+									<p>Created to provide small businesses with mobile app based prepaid debit payment solution. Participated in Launch Chapel Hill accelerator incubator in S2018.
+									<ul> * Market research: identified customer pain points through extensive market research and interviewing ~50 local businesses; calculated TAM size and projected financials.</ul>
+									<ul> * Business development: Prepared and refined pitch deck, presenting to investors and local communities, met with over 100 potential customers and establishing legal entities.</ul>
+									<ul> * Self-taught React from scratch, and thru a two-month long code sprint delivered and published two apps to Google Play Store, along with shipping a working backend using and deployed on AWS/Heroku.</ul>
 
-									<ul> * Market research: identified customer pain points thru extensivemarket research and interviews, calculate TAM size and projected financials.</ul>
-									<ul> * Business development: preparing and refining pitch deck, meeting with potential customers, and presenting to investors.</ul>
-									<ul> * BUIDL: taught myself React from scratch, and thru a two months long code sprint delivered and published two apps to Google Play Store, along with shipping a working backend using and deployed on AWS/Heroku.</ul>
 
 								</li>
 <!-- 								<li>
@@ -193,18 +187,15 @@
 									<h2>2013-2017</h2>
 									<h3>Bachelor of Arts</h3>
 									<h4>Hampshire College</h4>
-									<p>Students at Hampshire College design their own curriculums and study concentration. I had my curriculum setup similar to a MBA program along ith a few classes in Computer Science nd Industrial Design.</p>
 
-									<p><br>Senior thesis: </p>
+									<p>Senior thesis: </p>
 									<a href="pdf/Autonomous Truck and Its Implication on the Trucking Industry.pdf">Autonomous Truck and Its Implication on the Trucking Industry</a>
 									<a href="pdf/Securing the Future of Connected Vehicles.pdf">Securing the Future of Connected Vehicles - An Analysis on Challenges and Market Opportunities</a>
-
 								</li>
 								<li>
-									<h2>2011-2013</h2>
-									<h3>High School Diploma</h3>
-									<h4>Portsmouth Abbey School</h4>
-									<p>Nothing going on here. Just a boring little Catholic High School in the tiny state of Rhode Island.</p>
+									<h2>2019-2022</h2>
+									<h3>CS Master Candidate</h3>
+									<h4>University of San Francisco</h4>
 								</li>
 							</ul>
 						</section>
@@ -237,7 +228,7 @@
 							</div>
 						</section> -->
 						<!-- skill section start -->
-						<div class="skill-section">
+<!-- 						<div class="skill-section">
 							<div class="section-title">
 								<h2>Skills</h2>
 							</div>
@@ -266,8 +257,8 @@
 									<div class="progress-bar-style" data-progress="31"></div>
 									<p>DevOps</p>
 								</div>
-							</div>
-							<div class="icon-box-area spad">
+							</div> -->
+<!-- 							<div class="icon-box-area spad">
 								<div class="icon-box">
 									<i class="fas fa-flag-checkered"></i>
 									<p>Racing</p>
@@ -280,7 +271,7 @@
 									<i class="fab fa-bitcoin"></i>
 									<p>Bitcoin</p>
 								</div>
-<!-- 								<div class="icon-box">
+								<div class="icon-box">
 									<i class="fas fa-bicycle"></i>
 									<p>Mountain biking</p>
 								</div>
@@ -290,9 +281,9 @@
 								</div>
 								<div class="icon-box">
 									<i class="fas fa-gamepad"></i>
-									<p>Fortnite</p> -->
+									<p>Fortnite</p>
 								</div>
-							</div>
+							</div> -->
 						</div>
 						<!-- skill section end -->
 					</div>
