--- a/home4.html
+++ b/home4.html
@@ -45,8 +45,7 @@
 						</div>
 					</div>
 					<div class="col-md-8 text-md-right header-buttons">
-						<a href="#" class="site-btn">Download CV</a>
-						<a href="#" class="site-btn">Discover me</a>
+						<a href="./pdf/Bill Li resume.pdf" class="site-btn">Resume</a>
 					</div>
 				</div>
 			</div>
